welcome.lessons.welcome.bat.bool2.InOrder.scala.error
inOrder:3: error: ')' expected but $XMLSTART$< found.
		return ( a <b && b<c )
                           ^inOrder:5: error: ')' expected but $XMLSTART$< found.
		return ( b <c)
                           ^